fixed dark mode

--- a/styles/darkmode.css
+++ b/styles/darkmode.css
@@ -32,3 +32,30 @@
  #dark-mode-toggle:hover {
    background: #444;
  }
+
+ .dark-mode #taylor,
+ .dark-mode #martin,
+ .dark-mode #gibson {
+   background-color: #333333;
+   color: #ffffff;
+ }
+
+ .dark-mode .pricing-container-classical {
+   background-color: #333333;
+   color: #ffffff;
+ }
+
+ .dark-mode .pricing-container-acoustic {
+   background-color: #333333;
+   color: #ffffff;
+ }
+
+ .dark-mode .card-location-cards {
+   background-color: #444444;
+   color: #ffffff;
+ }
+
+ .dark-mode .card-location-cards h2 {
+   background-color: #444444;
+   color: #ffcc00;
+ }
